--- a/about/index.html
+++ b/about/index.html
@@ -13,11 +13,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="The first community driven security conference in Ramallah" />
 <meta property="og:description" content="The first community driven security conference in Ramallah" />
-<link rel="canonical" href="http://localhost:4000/about/" />
-<meta property="og:url" content="http://localhost:4000/about/" />
+<link rel="canonical" href="/about/" />
+<meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Bsides Ramallah" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"http://localhost:4000/about/","headline":"About","name":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
+{"@type":"WebSite","url":"/about/","headline":"About","name":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
@@ -46,6 +46,7 @@ for more information on BSides, check out the <a href="http://www.securitybsides
 
 <h2 id="why-bsidesramallah">Why BSidesRamallah?</h2>
 <p>I attended my first ever BSides conference while studying at Rochester Institute of Technology in 2017. I liked the idea of the conference being community-driven and started thinking about what would it take to organize a similar event in Ramallah once I am back home. When I told my friend Daoud about the idea, the first thing he said; Yeah let’s do it! and this was the begining of BSidesRamallah!</p>
+
 
       </section>
     </div>
