--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="The first community driven security conference in Ramallah" />
 <meta property="og:description" content="The first community driven security conference in Ramallah" />
-<link rel="canonical" href="http://localhost:4000/404.html" />
-<meta property="og:url" content="http://localhost:4000/404.html" />
+<link rel="canonical" href="/404.html" />
+<meta property="og:url" content="/404.html" />
 <meta property="og:site_name" content="Bsides Ramallah" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"http://localhost:4000/404.html","headline":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"/404.html","headline":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
