--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="The first community driven security conference in Ramallah" />
 <meta property="og:description" content="The first community driven security conference in Ramallah" />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
+<link rel="canonical" href="/" />
+<meta property="og:url" content="/" />
 <meta property="og:site_name" content="Bsides Ramallah" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"http://localhost:4000/","headline":"Bsides Ramallah","name":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
+{"@type":"WebSite","url":"/","headline":"Bsides Ramallah","name":"Bsides Ramallah","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
