--- a/schedule.html
+++ b/schedule.html
@@ -13,11 +13,11 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="The first community driven security conference in Ramallah" />
 <meta property="og:description" content="The first community driven security conference in Ramallah" />
-<link rel="canonical" href="/" />
-<meta property="og:url" content="/" />
+<link rel="canonical" href="/schedule.html" />
+<meta property="og:url" content="/schedule.html" />
 <meta property="og:site_name" content="Bsides Ramallah v0.1" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"/","headline":"Bsides Ramallah v0.1","name":"Bsides Ramallah v0.1","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
+{"@type":"WebPage","url":"/schedule.html","headline":"Bsides Ramallah v0.1","description":"The first community driven security conference in Ramallah","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
   </head>
@@ -42,9 +42,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h2 id="where-and-when">Where and When</h2>
-<p>TBD</p>
-
+        <h2 id="schedule-coming-soon">SCHEDULE COMING SOON!</h2>
 
       </section>
     </div>
